--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body { 
-	background: #cccccc
+	background: #cccccc;
+}
+h1{
+	text-align: center;
 }
 p {
 	text-align: center;
 }
+#missao {
+	font-size: 20px;
+}
 em strong {
-	color: #ffffff
+	color: #ffffff;
 	
 }
